--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,8 +7,8 @@ html {
 }
 
 body {
-	font-family: Arial;
 	background: #f1f1f1;
+	font-family: Arial;
 	margin: 0;
 }
 
@@ -20,7 +20,7 @@ body {
 }
 
 .header h1 {
-	font-size: 45px;
+	font-size:45px;
 }
 
 .navbar {
@@ -31,7 +31,7 @@ body {
 .navbar a {
     color: #FFFFFF;
     padding: 15px 20px 15px 20px;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -48,31 +48,41 @@ body {
     color: #000000;
 }
 
-.leftcolumn {
-	float: left;
-	padding-left: 20px;
-	width: 25%;
-}
-
-.rightcolumn {
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 75%;
-}
-
-.card {
-	background-color: white;
-	border: 1px solid #ADADAD;
-	margin-top: 20px;
-	padding: 20px;
-    border-radius: 5px 5px 5px 5px;
+.row {
+	padding: 5px 5px 5px 5px;
+	width: 100%;
 }
 
 .row:after {
 	clear: both;
 	content: "";
 	display: table;
+}
+
+.leftcolumn {
+	float: left;
+	height: 100%;
+	padding: 0px 10px 0px 20px;
+	width: 25%;
+}
+
+.rightcolumn {
+	float: left;
+	height: 100%;
+	padding: 0px 20px 0px 10px;
+	width: 75%;
+}
+
+.card {
+	background-color: white;
+	border: 1px solid #ADADAD;
+	margin: 20px 0px 20px 0px;
+	padding: 20px 20px 20px 20px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.leftcolumn .card {
+	height: 100%;
 }
 
 .footer {
@@ -94,7 +104,7 @@ h1, h2 {
 	text-align: center;
 }
 
-table{
+table {
     border-collapse: collapse;
 }
 
