--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,7 +8,7 @@ html {
 
 body {
 	background: #f1f1f1;
-	font-family: Arial;
+	font-family: Helvetica;
 	margin: 0;
 }
 
@@ -20,7 +20,7 @@ body {
 }
 
 .header h1 {
-	font-size:45px;
+	font-size: 45px;
 }
 
 .navbar {
