Added a scroll to top button

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	font-family: Arial;
+	font-family: Helvetica;
 	background: #f1f1f1;
 	margin: 0;
 }
@@ -82,10 +82,6 @@ body {
     border-radius: 5px 5px 5px 5px;
 }
 
-.leftcolumn .card {
-	height: 100%;
-}
-
 .footer {
 	background: #DDDDDD;
 	margin-top: 20px;
@@ -93,7 +89,28 @@ body {
 	text-align: center;
 }
 
+.totopbutton {
+	background-color: #23272A;
+	border-radius: 5px;
+	border: none;
+	bottom: 20px;
+	font-size: 18px;
+	padding: 5px;
+	position: fixed;
+	right: 30px;
+	z-index: 99;
+}
+
+.totopbutton:hover {
+	background-color: #00FFFF;
+}
+
 img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	height: 100%;
     border-radius: 5px 5px 5px 5px;
 }
 
@@ -107,6 +124,7 @@ h1, h2 {
 
 table {
     border-collapse: collapse;
+	padding: 5px 5px 5px 5px;
 }
 
 td {
@@ -146,8 +164,16 @@ th {
 }
 
 @media screen and (max-width: 400px) {
+	body {
+		text-align: center;
+	}
+	.leftcolumn, .rightcolumn {
+		padding: 5px 5px 5px 5px;
+	}
+	.card {
+		padding: 10px 10px 10px 10px;
+	}
 	.navbar a {
-		float: none;
 		width: 100%;
 	}
 }
