--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,6 +70,29 @@ body {
 	width: 75%;
 }
 
+.footer {
+	background: #DDDDDD;
+	margin-top: 20px;
+	padding: 10px;
+	text-align: center;
+}
+
+.totopbutton {
+	background-color: #23272A;
+	border-radius: 5px;
+	border: none;
+	bottom: 20px;
+	font-size: 18px;
+	padding: 5px;
+	position: fixed;
+	right: 30px;
+	z-index: 99;
+}
+
+.totopbutton:hover {
+	background-color: #00FFFF;
+}
+
 .card {
 	background-color: white;
 	border: 1px solid #ADADAD;
@@ -78,11 +101,27 @@ body {
     border-radius: 5px 5px 5px 5px;
 }
 
-.footer {
-	background: #DDDDDD;
-	margin-top: 20px;
-	padding: 10px;
-	text-align: center;
+.container {
+	padding: 5px 5px 5px 5px;
+	width: 100%;
+}
+
+.container:after {
+	clear: both;
+	content: "";
+	display: table;
+}
+
+.leftcontainer {
+	float: left;
+	padding: 10px 10px 10px 10px;
+	width: 25%;
+}
+
+.rightcontainer {
+	float: left;
+	padding: 10px 10px 10px 10px;
+	width: 75%;
 }
 
 img {
@@ -134,6 +173,9 @@ th {
 
 @media screen and (max-width: 800px) {
 	.leftcolumn, .rightcolumn {
+		width: 100%;
+	}
+	.leftcontainer, .rightcontainer {
 		width: 100%;
 	}
 }
