--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,15 +6,6 @@ body {
 	font-family: Arial;
 	background: #f1f1f1;
 	margin: 0;
-	background:
-		repeating-linear-gradient(
-			45deg,
-			#FFFFFF,
-			#f1f1f1 10px,
-			#ADADAD 10px,
-			#ADADAD 20px
-		)
-	;
 }
 
 header {
@@ -85,7 +76,7 @@ footer {
 }
 
 .card {
-	background:rgba(255, 255, 255, 80%);
+	background: #FFFFFF;
 	border: 1px solid #ADADAD;
 	margin-top: 20px;
 	padding: 20px;
@@ -122,19 +113,25 @@ ion-icon:hover {
 	color: #23272A;
 }
 
+.icon {
+	filter: grayscale();
+	margin: 0 5px;
+}
+
 button {
-	background-color: #23272A;
-	color: #FFFFFF;
+	background: #F1F1F1;
+	color: #000000;
     border: none;
 	font-size: 15px;
 	padding: 10px;
+	border: 1px solid #ADADAD;
 	border-radius: 5px;
 	transition: background-color 0.5s;
 	transition: color 0.5s;
 }
 
 button:hover {
-	background-color: #ADADAD;
+	background-color: #DDDDDD;
     color: #FFFFFF;
 }
 
@@ -178,7 +175,6 @@ h1, h2 {
 }
 
 table {
-	background-color: #FFFFFF;
     border-collapse: collapse;
 	padding: 5px ;
 }
