--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,6 +84,11 @@ footer {
 	width: 100%;
 }
 
+.card:target {
+	background: repeating-linear-gradient(45deg, #FFFFFF, #FFFFFF 10px, #F1F1F1 10px, #F1F1F1 20px);
+	border: 1px solid #23272A;
+}
+
 .card:after {
 	clear: both;
 	content: "";
@@ -101,15 +106,16 @@ footer {
 	width: 75%;
 }
 
-.socialIcon ion-icon {
+.contactIcon ion-icon {
 	height: 30px;
 	width: 30px;
 	color: #ADADAD;
 	transition: color 0.2s;
+	padding-top: 5px;
 	margin: 0 5px;
 }
 
-.socialIcon ion-icon:hover {
+.contactIcon ion-icon:hover {
 	color: #23272A;
 }
 
@@ -118,6 +124,17 @@ footer {
 	width: 30px;
 	color: #ADADAD;
 	margin: 0 5px;
+}
+
+.contactBox {
+	padding: 5px;
+	transition: background 0.5s;
+}
+
+.contactBox:target {
+	background: repeating-linear-gradient(45deg, #FFFFFF, #FFFFFF 10px, #F1F1F1 10px, #F1F1F1 20px);
+	border: 1px solid #DDDDDD;
+	border-radius: 5px;
 }
 
 button {
@@ -171,7 +188,8 @@ p {
 	padding: 15px;
 }
 
-h1, h2 {
+h2 {
+	color: #23272A;
 	text-align: center;
 }
 
