--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,12 @@ body {
 	font-family: Arial;
 	background: #f1f1f1;
 	margin: 0;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 header {
