--- a/css/blog.css
+++ b/css/blog.css
@@ -7,7 +7,7 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
-	background-color: #F1F1F1;
+	background: #F1F1F1;
 }
 
 ::-webkit-scrollbar {
@@ -18,7 +18,7 @@ header {
     color: #FFFFFF;
     padding: 30px;
     text-align: center;
-    background-color: #212121;
+    background: #212121;
 }
 
 header h1 {
@@ -61,7 +61,7 @@ footer {
 #contentBar {
 	padding: 10px;
 	color: #FFFFFF;
-	background-color: #212121;
+	background: #212121;
 	border-radius: 5px;
 }
 
@@ -73,7 +73,7 @@ footer {
 }
 
 #contentBar a:hover {
-	background-color: #F1F1F1;
+	background: #F1F1F1;
 	color: #212121;
 }
 
@@ -81,7 +81,7 @@ footer {
 	padding: 30px;
 	border: 1px solid #ADADAD;
 	border-radius: 5px;
-	background-color: #FFFFFF;
+	background: #FFFFFF;
 }
 
 #toTopButton {
@@ -92,12 +92,12 @@ footer {
 	z-index: 100;
 	border: none;
 	outline: none;
-	background-color: #212121;
+	background: #212121;
 	color: #FFFFFF;
 }
 
 #toTopButton:hover {
-	background-color: #555555;
+	background: #555555;
 }
 
 h2 {
