--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,9 @@
 }
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
-	background-color: #F1F1F1;
+	background: #F1F1F1;
+	font-family: Arial;
 }
 
 ::-webkit-scrollbar {
@@ -16,9 +16,9 @@ body {
 
 header {
     color: #FFFFFF;
+    background: #212121;
     padding: 30px;
     text-align: center;
-    background-color: #212121;
 }
 
 header h1 {
@@ -26,16 +26,16 @@ header h1 {
 }
 
 nav {
+    color: #FFFFFF;
+    background: #212121;
 	margin: 15px 20px;
 	margin-bottom: 0;
     overflow: hidden;
-    background: #212121;
 	border-radius: 5px;
 }
 
 nav a {
 	margin: 5px;
-    color: #FFFFFF;
 	display: block;
     padding: 10px 15px;
     text-align: center;
@@ -44,16 +44,40 @@ nav a {
 
 nav a:hover {
 	color: #212121;
+	background: #F1F1F1;
 	text-decoration: none;
-	background-color: #F1F1F1;
 }
 
-nav a.left {
-    float: left;
+.nav-menu {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    right: 0;
+    background: #212121;
+    overflow: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+    text-align: left;
+    margin: 0 !important;
+	border-radius: 0;
 }
 
-nav a.right {
-    float: right;
+.nav-menu a {
+	float: left !important;
+    text-align: left !important;
+    padding: 10px 40px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #FFFFFF;
+    display: block;
+    transition: 0.3s;
+}
+
+.nav-menu a:hover {
+	background: none;
+	color: #FFFFFF;
 }
 
 row {
@@ -79,21 +103,23 @@ row .rightColumn {
 }
 
 footer {
+	color: #000000;
+	background:#DDDDDD;
 	width: 100%;
 	border: 1px solid #ADADAD;
 	padding: 10px;
 	margin-top: 20px;
-	background:#DDDDDD;
 	text-align: center;
 }
 
 .card {
+	color: #000000;
+	background: #FFFFFF;
 	width: 100%;
 	border: 1px solid #ADADAD;
 	margin-top: 20px;
 	padding: 20px;
     border-radius: 5px;
-	background-color: #FFFFFF;
 }
 
 .card:target {
@@ -118,7 +144,7 @@ footer {
 	float: left;
 }
 
-.contactIcon ion-icon {
+.contact-icon ion-icon {
 	color: #ADADAD;
 	width: 30px;
 	height: 30px;
@@ -127,8 +153,8 @@ footer {
 	padding-top: 5px;
 }
 
-.contactIcon ion-icon:hover {
-	color: #23272A;
+.contact-icon ion-icon:hover {
+	color: #212121;
 }
 
 .icon {
@@ -149,7 +175,38 @@ footer {
 	border-radius: 5px;
 }
 
-#toTopButton {
+#menu-open-btn {
+	margin: 5px;
+	display: none;
+	border: none;
+	background: transparent;
+}
+
+#menu-open-btn:hover {
+	background: none;
+	color: none;
+}
+
+#menu-open-btn div {
+    width: 25px;
+    height: 3px;
+    background: #FFFFFF;
+    margin-top: 4px;
+}
+
+#menu-close-btn {
+    border: none;
+    background: transparent;
+    color: #FFFFFF;
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 30px;
+	display: none;
+}
+
+
+#to-top-btn {
 	display: none;
 	position: fixed;
 	bottom: 20px;
@@ -157,12 +214,13 @@ footer {
 	z-index: 100;
 	border: none;
 	outline: none;
-	background-color: #212121;
+	border-radius: 30% 0;
+	background: #212121;
 	color: #FFFFFF;
 }
 
-#toTopButton:hover {
-	background-color: #555555;
+#to-top-btn:hover {
+	background: #555555;
 }
 
 button {
@@ -171,14 +229,14 @@ button {
 	padding: 10px;
 	font-size: 15px;
 	background: #F1F1F1;
-	transition: background-color 0.5s;
+	transition: background 0.5s;
 	transition: color 0.5s;
 	border-radius: 5px;
 }
 
 button:hover {
     color: #FFFFFF;
-	background-color: #DDDDDD;
+	background: #DDDDDD;
 }
 
 button a {
@@ -206,13 +264,13 @@ h2 {
 table {
 	padding: 5px ;
     border-collapse: collapse;
-	background-color: #FFFFFF;
+	background: #FFFFFF;
 }
 
 th {
     padding: 20px 0;
     color: #23272A;
-    background-color: #ADADAD;
+    background: #ADADAD;
     border: 1px solid #000000;
 }
 
@@ -223,7 +281,7 @@ td {
 
 tr:hover {
     color: #FFFFFF;
-    background-color: #23272A;
+    background: #23272A;
 }
 
 a {
@@ -235,8 +293,12 @@ a:hover {
     text-decoration: underline;
 }
 
-tr:hover a {
-    color: #FFFFFF;
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
 }
 
 @media screen and (max-width: 950px) {
@@ -274,6 +336,9 @@ tr:hover a {
 	nav {
 		display: none;
 	}
+	#menu-open-btn {
+		display: block;
+	}
 }
 
 @media screen and (max-width: 550px) {
@@ -282,5 +347,8 @@ tr:hover a {
 	}
 	.card .leftContainer, .card .rightContainer {
 		padding: 5px;
+	}
+	table {
+		font-size: 12px;
 	}
 }
