--- a/css/index.css
+++ b/css/index.css
@@ -23,18 +23,17 @@ header {
     text-align: center;
     color: #FFFFFF;
     background: #212121;
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 50%);
     box-shadow: 0 0 10px rgb(0 0 0 / 50%);
 }
 
 header h1 {
 	font-size: 45px;
 	font-weight: 100;
-	text-shadow: 3px 3px rgba(255, 255, 255, 0.5);
+	text-shadow: 0 0 20px rgba(255, 225, 255, 0.5);
 }
 
-#lable {
-	margin: 0;
+header p {
+	margin: 15px 0;
 	font-size: 14px;
 }
 
@@ -45,7 +44,6 @@ nav {
 	border-radius: 5px;
     color: #FFFFFF;
     background: #212121;
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 50%);
     box-shadow: 0 0 10px rgb(0 0 0 / 50%);
 }
 
@@ -55,12 +53,14 @@ nav a {
     padding: 10px 15px;
     text-align: center;
 	border-radius: 5px;
+	text-shadow: 0 0 5px #ADADAD;
 }
 
 nav a:hover {
 	text-decoration: none;
 	color: #212121;
 	background: #F1F1F1;
+	text-shadow: none;
 }
 
 .nav-menu {
@@ -77,6 +77,7 @@ nav a:hover {
     text-align: left;
     margin: 0 !important;
 	border-radius: 0;
+	font-size: 10px;
 }
 
 .nav-menu a {
@@ -126,7 +127,9 @@ nav a:hover {
 }
 
 row {
+	display: inline-block;
 	width: 100%;
+	padding: 0 20px;
 }
 
 row:after {
@@ -135,51 +138,23 @@ row:after {
 	display: table;
 }
 
-row .left-column {
-	width: 25%;
-	float: left;
-	padding-left: 20px;
-}
-
-row .right-column  {
-	width: 75%;
-	float: left;
-	padding: 0 20px;
-}
-
-footer {
-	color: #000000;
-	background:#DDDDDD;
-	width: 100%;
-	border: 1px solid #ADADAD;
-	padding: 10px;
-	margin-top: 20px;
-	text-align: center;
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-}
-
-footer p {
-	margin: 0;
-	padding: 0;
-	font-size: 10px;
-	font-weight: 500;
-}
-
 .card {
 	width: 100%;
 	border: 1px solid #ADADAD;
-	margin-top: 20px;
 	padding: 20px;
+	margin-top: 20px;
     border-radius: 5px;
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 15%);
     box-shadow: 0 0 10px rgb(0 0 0 / 15%);
 	color: #000000;
 	background: #FFFFFF;
 }
 
+.card h2 {
+	font-weight: 100;
+	text-align: center;
+}
+
 .card:target {
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 40%);
     box-shadow: 0 0 10px rgb(0 0 0 / 40%);
 }
 
@@ -189,15 +164,28 @@ footer p {
 	display: table;
 }
 
-.card .leftContainer {
-	width: 25%;
-	float: left;
-	padding-right: 20px;
+.card table {
+	padding: 5px ;
+    border-collapse: collapse;
+	background: #FFFFFF;
+    box-shadow: 0 0 10px rgb(0 0 0 / 25%);
 }
 
-.card .rightContainer {
-	width: 75%;
-	float: left;
+.card table th {
+    padding: 20px 0;
+    color: #23272A;
+    background: #ADADAD;
+    border: 1px solid #000000;
+}
+
+.card table td {
+    padding: 10px;
+    border: 1px solid #ADADAD;
+}
+
+.card table tr:hover {
+    color: #FFFFFF;
+    background: #23272A;
 }
 
 .contact-icon ion-icon {
@@ -213,13 +201,6 @@ footer p {
 	color: #212121;
 }
 
-.icon {
-	color: #ADADAD;
-	width: 30px;
-	height: 30px;
-	margin: 0 5px;
-}
-
 .contactBox {
 	padding: 5px;
 	transition: background 0.5s;
@@ -232,6 +213,7 @@ footer p {
 }
 
 #to-top-btn {
+	padding: 5px;
 	display: none;
 	position: fixed;
 	bottom: 10px;
@@ -239,75 +221,35 @@ footer p {
 	z-index: 100;
 	border: none;
 	outline: none;
-	border-radius: 30% 0;
+	border-radius: 3px;
 	background: #212121;
 	color: #FFFFFF;
+	opacity: 0.7;
 }
 
 #to-top-btn:hover {
-	background: #555555;
+	opacity: 1;
 }
 
-button {
+footer {
+	color: #000000;
+	background:#DDDDDD;
 	border: 1px solid #ADADAD;
 	padding: 10px;
-	font-size: 15px;
-	transition: all 0.5s;
-	border-radius: 5px;
-	color: #000000;
-	background: #F1F1F1;
-}
-
-button:hover {
-    color: #FFFFFF;
-	background: #DDDDDD;
-    -webkit-box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-}
-
-button a {
-	color: inherit;
-    text-decoration: none;
-}
-
-button a:hover {
-	color: inherit;
-    text-decoration: none;
-}
-
-img {
-    border-radius: 5px;
-}
-
-p {
-	padding: 5px;
-}
-
-h2 {
+	width: 100%;
+	margin-top: 20px;
 	text-align: center;
+    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+	font-size: 10px;
+	line-height: 10px;
+	font-weight: 500;
+	position: relative;
+	bottom: 0;
 }
 
-table {
-	padding: 5px ;
-    border-collapse: collapse;
-	background: #FFFFFF;
-}
-
-th {
-    padding: 20px 0;
-    color: #23272A;
-    background: #ADADAD;
-    border: 1px solid #000000;
-}
-
-td {
-    padding: 10px;
-    border: 1px solid #ADADAD;
-}
-
-tr:hover {
-    color: #FFFFFF;
-    background: #23272A;
+footer p {
+	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -319,6 +261,35 @@ a:hover {
     text-decoration: underline;
 }
 
+.theme-button {
+	border: 1px solid #ADADAD;
+	padding: 10px 15px;
+	font-size: 15px;
+	transition: all 0.5s;
+	border-radius: 5px;
+	color: #000000;
+	background: #F1F1F1;
+	cursor: pointer !important;
+    box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+}
+
+.theme-button:hover {
+    color: #FFFFFF;
+	background: #DDDDDD;
+    box-shadow: 0 0 10px rgb(0 0 0 / 30%);
+}
+
+.profile-picture {
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+}
+
+.icon {
+	width: 30px;
+	height: 30px;
+	margin: 0 5px;
+}
+
 .left {
     float: left;
 }
@@ -327,66 +298,62 @@ a:hover {
     float: right;
 }
 
-@media screen and (min-width: 1500px) {
+.left-column {
+	width: 25%;
+	float: left;
+}
+
+.right-column  {
+	width: 75%;
+	float: right;
+	padding-left: 20px;
+}
+
+@media (min-width: 1680px) {
 	body {
 		margin: 0 auto;
 	}
 }
 
-@media screen and (max-width: 950px) {
+@media (max-width: 768px) {
 	body {
 		text-align: center;
 	}
 	nav {
-		margin: 30px;
+		display: none;
 	}
 	img {
 		max-width: 300px;
 		max-height: 300px;
 	}
-	row .left-column, row .right-column  {
+	.left-column, .right-column  {
 		width: 100%;
-	}
-	.card .leftContainer, .card .rightContainer {
-		width: 100%;
-	}
-	row .left-column, row .right-column  {
-		padding: 0px 30px 0px 30px;
-	}
-	.card .leftContainer, .card .rightContainer {
-		padding: 0px 30px 0px 30px;
-	}
-	row .left-column, .card .leftContainer {
-		padding-bottom: 25px;
-	}
-	.card {
-		padding: 10px;
-	}
-}
-
-@media screen and (max-width: 745px) {
-	nav {
-		display: none;
 	}
 	#menu-open-btn {
 		display: block;
 	}
+	.left-column, .right-column  {
+		padding: 0;
+	}
+	.card .right-column {
+		padding-top: 20px;
+	}
 }
 
-@media screen and (max-width: 550px) {
-	row .left-column, row .right-column  {
-		padding: 15px;
-	}
-	.card .leftContainer, .card .rightContainer {
-		padding: 5px;
-	}
+@media (max-width: 550px) {
 	table {
 		font-size: 14px;
 	}
 }
 
-@media screen and (max-width: 370px) {
+@media (max-width: 375px) {
 	table {
 		font-size: 11px;
+	}
+}
+
+@media (max-width: 300px) {
+	body {
+		display: none;
 	}
 }
