--- a/css/index.css
+++ b/css/index.css
@@ -315,28 +315,34 @@ a:hover {
 	}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 	body {
 		text-align: center;
-	}
-	nav {
-		display: none;
 	}
 	img {
 		max-width: 300px;
 		max-height: 300px;
 	}
+	.card h2 {
+		font-weight: 700;
+	}
 	.left-column, .right-column  {
 		width: 100%;
-	}
-	#menu-open-btn {
-		display: block;
 	}
 	.left-column, .right-column  {
 		padding: 0;
 	}
 	.card .right-column {
 		padding-top: 20px;
+	}
+}
+
+@media (max-width: 768px) {
+	nav {
+		display: none;
+	}
+	#menu-open-btn {
+		display: block;
 	}
 }
 
