--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
+
 * {
 	box-sizing: border-box;
 }
@@ -13,7 +23,7 @@ html {
 
 body {
 	margin: 0;
-	font-family: Arial;
+	font-family: "Poppins", Arial, sans-serif;
 	max-width: 1500px;
 	background: #F1F1F1;
 }
@@ -28,7 +38,6 @@ header {
 
 header h1 {
 	font-size: 45px;
-	font-weight: 100;
 	text-shadow: 0 0 20px rgba(255, 225, 255, 0.5);
 }
 
@@ -150,7 +159,10 @@ row:after {
 }
 
 .card h2 {
-	font-weight: 100;
+	text-align: center;
+}
+
+.card p {
 	text-align: center;
 }
 
@@ -169,6 +181,7 @@ row:after {
     border-collapse: collapse;
 	background: #FFFFFF;
     box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+	text-align: center;
 }
 
 .card table th {
@@ -322,9 +335,6 @@ a:hover {
 	img {
 		max-width: 300px;
 		max-height: 300px;
-	}
-	.card h2 {
-		font-weight: 700;
 	}
 	.left-column, .right-column  {
 		width: 100%;
