--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap')
 
-
 $BORDER_RADIUS: 5px
 
 *
@@ -144,7 +143,8 @@ label
 	flex-direction: column
 	justify-content: center
 	a
-		margin: 5px 15px
+		width: 300px
+		margin: 5px auto
 		padding: 5px 15px
 		border-radius: $BORDER_RADIUS
 		display: flex
@@ -183,9 +183,32 @@ label
 	padding-right: 0
 
 .profile-pic
-	width: 100%
-	border-radius: $BORDER_RADIUS
+	display: flex
+	justify-content: center
+	img
+		width: 100%
+		max-width: 300px
+		border-radius: $BORDER_RADIUS
 
 .no-hover-effect
 	color: #212121 !important
 	background-color: #FFFFFF !important
+
+@media (max-width: 768px)
+	nav
+		display: none
+	.left-column
+		padding: 10px
+	.right-column
+		padding: 10px
+
+@media (max-width: 375px)
+	header
+		h1
+			font-size: 30px
+		p
+			font-size: 12px
+			i
+				font-size: 10px
+	.lgt-table
+		font-size: 13px
